@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.17 2005/11/02 21:54:29 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.18 2005/11/18 02:25:44 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -47,6 +47,9 @@ class livecd_stage1_target(generic_stage_target):
 	def set_packages(self):
 	    generic_stage_target.set_packages(self)
 	    if self.settings.has_key(self.settings["spec_prefix"]+"/packages"):
+		if type(self.settings[self.settings["spec_prefix"]+"/packages"]) == types.StringType:
+		    self.settings[self.settings["spec_prefix"]+"/packages"] = \
+			self.settings[self.settings["spec_prefix"]+"/packages"].split()
 		self.settings[self.settings["spec_prefix"]+"/packages"].append("livecd-tools")
 
 	def set_pkgcache_path(self):
